<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ArtistDetailActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/artista"
        android:textAlignment="center"
        android:textColor="#555555"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:layout_constraintStart_toStartOf="@+id/title"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="50dp"
            android:layout_marginBottom="40dp"
            android:padding="0dp"
            app:cardBackgroundColor="#000"
            app:cardCornerRadius="14dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintTop_toTopOf="@+id/titleAlbumView">

            <ImageView
                android:id="@+id/image"
                android:layout_width="400dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="-50dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="-50dp"
                android:contentDescription="@string/cover_image"
                android:src="@drawable/buscando" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descripción: "
        android:textAlignment="textStart"
        android:textColor="#888888"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa "
        android:textAlignment="textStart"
        android:textColor="#888888"
        android:layout_marginLeft="10dp"
        android:textSize="15sp"
        android:background="@drawable/corners_ddddd"
        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="15dp"

        />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corners"
        app:backgroundTint="@color/cardview_dark_background"
        />



</androidx.constraintlayout.widget.ConstraintLayout>