<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AlbumDetailActivity">

    <TextView
        android:id="@+id/titleAlbumView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/album"
        android:textAlignment="center"
        android:textColor="#555555"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="360dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        tools:ignore="MissingConstraints"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="50dp"
            android:layout_marginBottom="40dp"
            android:padding="0dp"
            app:cardBackgroundColor="#000"
            app:cardCornerRadius="14dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintTop_toTopOf="@+id/titleAlbumView">

            <ImageView
                android:id="@+id/imageAlbum"
                android:layout_width="400dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="-50dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="-50dp"
                android:contentDescription="@string/cover_image"
                android:src="@drawable/buscando" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero"
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/genderAlbumView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salsa"
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Discográfica: "
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/recordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Elektra"
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fecha: "
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Elektra"
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/layout3"
        app:layout_constraintTop_toTopOf="@+id/layout3"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descripción: "
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:text="Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa "
            android:textAlignment="textStart"
            android:textColor="#888888"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:background="#DDDDDD"
            />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>